# hardsync

./: .gitignore  Makefile  README.md  build.py  pyproject.toml  sync.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-test.yml
cpp/src/: comms.cpp  parser.h
cpp/src/example/: parser.h  sketch_aug19b.ino
cpp/tests/: parser_test.cpp
hardsync/: __init__.py  __main__.py  channel.py  channels.py  client.py  clients.py  contracts.py  defaults.py  device.py  discovery.py  dynamics.py  encodings.py  interfaces.py  main.py  parser.py  test_client.py  test_dynamics.py  test_main_generate.py  test_parser.py  test_transpiler.py  transpiler.py  types.py  utils.py
hardsync/cpp/: CMakeLists.txt  Makefile
hardsync/cpp/src/: comms.cpp  comms.h  math.cpp  parser.cpp
hardsync/cpp/src/example/: comms.cpp  comms.h  parser.cpp
hardsync/cpp/tests/: test_math.cpp
hardsync/example/: application.py  contract.py  requesting_application.py
hardsync/generators/: common.py  test_common.py
hardsync/generators/arduino/: __init__.py  arduino.py  client_template.cpp  client_template.h  parser_template.cpp  test_arduino.py
hardsync/generators/arduino/templates/: client.cpp  client.h  firmware.ino  parser.cpp  parser.h  sketch_desired.ino
hardsync/generators/arduino/test_data/: client.cpp  client.h  contract.py  (+6 more)
hardsync/generators/python/: __init__.py  client_template.py  python.py  test_python.py
hardsync/test_data/: parser_arduino.cpp
hardsync/tests/: test_channels.py  test_dynamics.py  test_encodings.py  test_main.py  test_transpiler.py  test_utils.py
(+13 files in other folders)
